--- a/build.gradle
+++ b/build.gradle
@@ -17,18 +17,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    def bintray_user = System.getenv('BINTRAY_USER')
-    def bintray_api_key = System.getenv('BINTRAY_API_KEY')
-    def version_name = System.getenv('TRAVIS_TAG')
-    if (bintray_user != null && bintray_api_key != null && version_name != null) {
-        rootProject.ext.bintray_user = bintray_user
-        rootProject.ext.bintray_api_key = bintray_api_key
-        rootProject.ext.version_name = version_name
-    } else {
-        rootProject.ext.bintray_user = ''
-        rootProject.ext.bintray_api_key = ''
-        rootProject.ext.version_name= 'debugVersion'
-    }
+//    def bintray_user = System.getenv('BINTRAY_USER')
+//    def bintray_api_key = System.getenv('BINTRAY_API_KEY')
+//    def version_name = System.getenv('TRAVIS_TAG')
+//    if (bintray_user != null && bintray_api_key != null && version_name != null) {
+//        rootProject.ext.bintray_user = bintray_user
+//        rootProject.ext.bintray_api_key = bintray_api_key
+//        rootProject.ext.version_name = version_name
+//    } else {
+//        rootProject.ext.bintray_user = ''
+//        rootProject.ext.bintray_api_key = ''
+//        rootProject.ext.version_name= 'debugVersion'
+//    }
+    rootProject.ext.version_name= '3.1.0-a1'
     repositories {
         jcenter()
         google()
@@ -63,6 +64,7 @@ ext {
     dexmaker_ver = "1.2"
     espresso_ver = "2.2.2"
     gson_ver = "2.8.5"
+
     group_id = "com.optimizely.ab"
     mavPluginVersion = '1.0.3'
     mavProjectName = 'optimizely-android-sdk'
@@ -75,11 +77,11 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-task ship() {
-    dependsOn(':android-sdk:uploadArchives', ':shared:uploadArchives',
-            'event-handler:uploadArchives', 'user-profile:uploadArchives',
-            'datafile-handler:uploadArchives')
-}
+//task ship() {
+//    dependsOn(':android-sdk:uploadArchives', ':shared:uploadArchives',
+//            'event-handler:uploadArchives', 'user-profile:uploadArchives',
+//            'datafile-handler:uploadArchives')
+//}
 
 task cleanAllModules () {
     logger.info("Running clean for all modules")
@@ -102,3 +104,7 @@ testAllModulesTravis.dependsOn(':android-sdk:connectedAndroidTest', ':android-sd
         ':user-profile:connectedAndroidTest', ':shared:connectedAndroidTest')
 
 testAllModules.dependsOn('testAllModulesTravis', ':test-app:connectedAndroidTest')
+
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
+}
