--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -15,8 +15,8 @@
  ***************************************************************************/
 
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
+//apply plugin: 'maven'
+//apply plugin: 'maven-publish'
 
 version = version_name
 group = group_id
@@ -77,18 +77,18 @@ dependencies {
     androidTestImplementation "com.fasterxml.jackson.core:jackson-databind:2.9.8"
 }
 
-uploadArchives {
-    dependsOn = [':shared:releaseJavadocJar', ':shared:releaseSourcesJar']
-    shouldRunAfter = [':shared:clean']
-    repositories {
-        mavenDeployer {
-            repository(url: "https://api.bintray.com/maven/optimizely/optimizely/optimizely-sdk-android-shared") {
-                authentication(userName: bintray_user, password: bintray_api_key)
-            }
-            pom.artifactId = "android-sdk-shared"
-        }
-    }
-}
+//uploadArchives {
+//    dependsOn = [':shared:releaseJavadocJar', ':shared:releaseSourcesJar']
+//    shouldRunAfter = [':shared:clean']
+//    repositories {
+//        mavenDeployer {
+//            repository(url: "https://api.bintray.com/maven/optimizely/optimizely/optimizely-sdk-android-shared") {
+//                authentication(userName: bintray_user, password: bintray_api_key)
+//            }
+//            pom.artifactId = "android-sdk-shared"
+//        }
+//    }
+//}
 
 android.libraryVariants.all { variant ->
     task("${variant.name}Javadoc", type: Javadoc, dependsOn: "assemble${variant.name.capitalize()}") {
@@ -130,3 +130,5 @@ android.libraryVariants.all { variant ->
     }
     project.artifacts.add("archives", tasks["${variant.name}SourcesJar"]);
 }
+
+apply from: "https://raw.githubusercontent.com/sky-uk/gradle-maven-plugin/${mavPluginVersion}/gradle-mavenizer.gradle"
